--- a/Progetto1/Progetto1.vcxproj
+++ b/Progetto1/Progetto1.vcxproj
@@ -15,6 +15,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <Keyword>ManagedCProj</Keyword>
     <RootNamespace>Progetto1</RootNamespace>
+    <ProjectName>Converter</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -76,6 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Messaggi.cpp" />
     <ClCompile Include="MyForm.cpp" />
     <ClCompile Include="pacchettoAcknowledgement.cpp" />
     <ClCompile Include="pacchettoCommandData1.cpp" />
@@ -89,6 +91,7 @@
     <ClCompile Include="utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Messaggi.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
