--- a/Progetto1/Progetto1.vcxproj.filters
+++ b/Progetto1/Progetto1.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="utility.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="Messaggi.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -84,6 +87,9 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="pacchettostatolineaatc.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="Messaggi.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
