--- a/Progetto1/Progetto1.vcxproj.filters
+++ b/Progetto1/Progetto1.vcxproj.filters
@@ -21,15 +21,6 @@
     <ClCompile Include="pacchettoAcknowledgement.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="pacchettoCommandData1.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
-    <ClCompile Include="pacchettoCommandData2.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
-    <ClCompile Include="pacchettoCommandData3.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
     <ClCompile Include="pacchettoMissionPlan.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
@@ -51,21 +42,15 @@
     <ClCompile Include="Messaggi.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="pacchettoCommandData.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="pacchettoAcknowledgement.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="pacchettoCommandData1.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="pacchettoCommandData2.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="pacchettoCommandData3.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="pacchettoMissionPlan.h">
@@ -90,6 +75,9 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="Messaggi.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="pacchettoCommandData.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
