--- a/Progetto1/Progetto1.vcxproj.filters
+++ b/Progetto1/Progetto1.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="tomWriterTraceListener.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
