--- a/Progetto1/app.config
+++ b/Progetto1/app.config
@@ -1,6 +1,59 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.diagnostics>
+    <!-- <sources>
+     <source name="System.Net" >
+        <listeners>
+          <add name="System.Net"/>
+        </listeners>
+      </source>
+      <source name="System.Net.Sockets">
+        <listeners>
+          <add name="System.Net"/>
+        </listeners>
+      </source>-->
+    <!-- <source name="System.Net.Cache">
+        <listeners>
+          <add name="System.Net" />
+        </listeners>
+      </source>
+    </sources>
+    <switches>-->
+    <!--<add name="System.Net" value="Verbose"  />
+      <add name="System.Net.Sockets" value="Verbose"/>-->
+    <!--<add name="System.Net.Cache" value="Verbose"/>
+    </switches>
+    <sharedListeners>
+      <add name="System.Net"
+        type="System.Diagnostics.TextWriterTraceListener"
+        initializeData="network.log"
+      />
+	 
+	   
+        <add name="System.Net"           type="System.Diagnostics.ConsoleTraceListener" />
+    
+		 <add name="System.Net" 
+          type="System.Diagnostics.XmlWriterTraceListener" 
+          initializeData="xmlOutput.xml" 
+          traceOutputOptions="ProcessId, DateTime,Timestamp,UserData" />
+    </sharedListeners>-->
+
+    <trace autoflush="true" indentsize="3" >
+      <listeners>
+        <add name="myListener" type="ApplicationFramework.tomWriterTraceListener,Converter" initializeData="TextWriterOutput.txt"
+          />
+        <!-- <add name="myListener2" 
+          type="System.Diagnostics.TextWriterTraceListener" 
+          initializeData="TextWriterOutput2.log" />-->
+        <remove name="Default" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
+</configuration>
+
+
+<!--<configuration>
+  <system.diagnostics>
     <sources>
       <source name="System.Net" tracemode="includehex" maxdatasize="1024">
         <listeners>
@@ -32,3 +85,4 @@
     <trace autoflush="true"/>
   </system.diagnostics>
 </configuration>
+-->
