--- a/Progetto1/Progetto1.vcxproj
+++ b/Progetto1/Progetto1.vcxproj
@@ -73,49 +73,80 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ReportViewer.Common">
+      <HintPath>Microsoft.ReportViewer.Common</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.WinForms">
+      <HintPath>..\..\..\..\..\..\Program Files\Microsoft Visual Studio 11.0\ReportViewer\Microsoft.ReportViewer.WinForms.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Form1.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Messaggi.cpp" />
     <ClCompile Include="MyForm.cpp" />
     <ClCompile Include="pacchettoAcknowledgement.cpp" />
+    <ClCompile Include="pacchettoComandoBlocco.cpp" />
+    <ClCompile Include="pacchettoComandoItinerari.cpp" />
     <ClCompile Include="pacchettoCommandData.cpp" />
+    <ClCompile Include="pacchettoEnd.cpp" />
+    <ClCompile Include="pacchettoFaultData.cpp" />
     <ClCompile Include="pacchettoMissionPlan.cpp" />
     <ClCompile Include="pacchettopresentazione.cpp" />
+    <ClCompile Include="pacchettoStatoBlocco.cpp" />
+    <ClCompile Include="pacchettoStatoItinerario.cpp" />
     <ClCompile Include="pacchettostatolineaatc.cpp" />
+    <ClCompile Include="pacchettoStatoLineaIXL.cpp" />
+    <ClCompile Include="pacchettoStatoSegnali.cpp" />
     <ClCompile Include="proveSerializzazione.cpp" />
     <ClCompile Include="String2string.cpp" />
     <ClCompile Include="tomWriterTraceListener.cpp" />
     <ClCompile Include="utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Form1.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Messaggi.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="pacchettoAcknowledgement.h" />
+    <ClInclude Include="pacchettoComandoBlocco.h" />
+    <ClInclude Include="pacchettoComandoItinerari.h" />
     <ClInclude Include="pacchettoCommandData.h" />
+    <ClInclude Include="pacchettoEnd.h" />
+    <ClInclude Include="pacchettoFaultData.h" />
     <ClInclude Include="pacchettoMissionPlan.h" />
     <ClInclude Include="pacchettopresentazione.h" />
+    <ClInclude Include="pacchettoStatoBlocco.h" />
+    <ClInclude Include="pacchettoStatoItinerario.h" />
     <ClInclude Include="pacchettostatolineaatc.h" />
-    <ClInclude Include="proveSerializzazione.h" />
+    <ClInclude Include="pacchettoStatoLineaIXL.h" />
+    <ClInclude Include="pacchettoStatoSegnali.h" />
     <ClInclude Include="String2string.h" />
     <ClInclude Include="struttureDatiMessaggi.h" />
     <ClInclude Include="tomWriterTraceListener.h" />
     <ClInclude Include="utility.h" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm.resx">
       <DependentUpon>MyForm.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Converter1.aps" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Converter2.rc" />
