--- a/Progetto1/Progetto1.vcxproj.filters
+++ b/Progetto1/Progetto1.vcxproj.filters
@@ -18,31 +18,10 @@
     <ClCompile Include="MyForm.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="pacchettoAcknowledgement.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
-    <ClCompile Include="pacchettoMissionPlan.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
-    <ClCompile Include="pacchettopresentazione.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
-    <ClCompile Include="pacchettostatolineaatc.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
     <ClCompile Include="String2string.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
     <ClCompile Include="proveSerializzazione.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
-    <ClCompile Include="utility.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
-    <ClCompile Include="Messaggi.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
-    <ClCompile Include="pacchettoCommandData.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
     <ClCompile Include="tomWriterTraceListener.cpp">
@@ -51,12 +30,87 @@
     <ClCompile Include="main.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="Form1.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="Messaggi.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoAcknowledgement.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoComandoBlocco.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoComandoItinerari.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoCommandData.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoEnd.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoFaultData.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoMissionPlan.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettopresentazione.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoStatoBlocco.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoStatoItinerario.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettostatolineaatc.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoStatoLineaIXL.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="pacchettoStatoSegnali.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="utility.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
+    <ClInclude Include="String2string.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="tomWriterTraceListener.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="Form1.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="Messaggi.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
     <ClInclude Include="pacchettoAcknowledgement.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="pacchettoComandoBlocco.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="pacchettoComandoItinerari.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="pacchettoCommandData.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="pacchettoEnd.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="pacchettoFaultData.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="pacchettoMissionPlan.h">
@@ -65,10 +119,19 @@
     <ClInclude Include="pacchettopresentazione.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
-    <ClInclude Include="proveSerializzazione.h">
+    <ClInclude Include="pacchettoStatoBlocco.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
-    <ClInclude Include="String2string.h">
+    <ClInclude Include="pacchettoStatoItinerario.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="pacchettostatolineaatc.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="pacchettoStatoLineaIXL.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="pacchettoStatoSegnali.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="struttureDatiMessaggi.h">
@@ -77,26 +140,18 @@
     <ClInclude Include="utility.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
-    <ClInclude Include="pacchettostatolineaatc.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="Messaggi.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="pacchettoCommandData.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="tomWriterTraceListener.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MyForm.resx">
       <Filter>File di risorse</Filter>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <Filter>File di risorse</Filter>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Converter1.aps" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Converter2.rc">
