--- a/Progetto1/Progetto1.vcxproj
+++ b/Progetto1/Progetto1.vcxproj
@@ -117,7 +117,7 @@
     <ClCompile Include="pacchettoStatoSegnali.cpp" />
     <ClCompile Include="ProfiloVelocita.cpp" />
     <ClCompile Include="proveSerializzazione.cpp" />
-    <ClCompile Include="stateCDB.cpp" />
+    <ClCompile Include="StateCDB.cpp" />
     <ClCompile Include="stateScudetti.cpp" />
     <ClCompile Include="stateSegnale.cpp" />
     <ClCompile Include="stazione.cpp" />
@@ -164,7 +164,7 @@
     <ClInclude Include="pacchettoStatoLineaIXL.h" />
     <ClInclude Include="pacchettoStatoSegnali.h" />
     <ClInclude Include="ProfiloVelocita.h" />
-    <ClInclude Include="stateCDB.h" />
+    <ClInclude Include="StateCDB.h" />
     <ClInclude Include="stateScudetti.h" />
     <ClInclude Include="stateSegnale.h" />
     <ClInclude Include="stazione.h" />
