--- a/Progetto1/Progetto1.vcxproj.filters
+++ b/Progetto1/Progetto1.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="pacchettoFaultData.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="pacchettoMissionPlan.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
     <ClCompile Include="pacchettopresentazione.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
@@ -129,6 +126,9 @@
     <ClCompile Include="MyForm2.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="pacchettoMissionData.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -159,9 +159,6 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="pacchettoFaultData.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="pacchettoMissionPlan.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="pacchettopresentazione.h">
@@ -240,6 +237,9 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="MyForm2.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="pacchettoMissionData.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
