--- a/Progetto1/Progetto1.vcxproj
+++ b/Progetto1/Progetto1.vcxproj
@@ -90,89 +90,91 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="binario.cpp" />
-    <ClCompile Include="Fault.cpp" />
+    <ClCompile Include="messaggi\Fault.cpp" />
     <ClCompile Include="Form1.cpp" />
     <ClCompile Include="Itinerario.cpp" />
+    <ClCompile Include="messaggi\pacchettoPositionDataATC.cpp" />
     <ClCompile Include="MyForm1.cpp" />
     <ClCompile Include="MyForm2.cpp" />
-    <ClCompile Include="pachettoStatoScudetti.cpp" />
-    <ClCompile Include="StateBlocco.cpp" />
-    <ClCompile Include="StateItinerario.cpp" />
+    <ClCompile Include="messaggi\pachettoStatoScudetti.cpp" />
+    <ClCompile Include="messaggi\StateBlocco.cpp" />
+    <ClCompile Include="messaggi\StateItinerario.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Messaggi.cpp" />
-    <ClCompile Include="Mission.cpp" />
+    <ClCompile Include="messaggi\Messaggi.cpp" />
+    <ClCompile Include="messaggi\Mission.cpp" />
     <ClCompile Include="MyForm.cpp" />
-    <ClCompile Include="pacchettoAcknowledgement.cpp" />
-    <ClCompile Include="pacchettoComandoBlocco.cpp" />
-    <ClCompile Include="pacchettoComandoItinerari.cpp" />
-    <ClCompile Include="pacchettoCommandData.cpp" />
-    <ClCompile Include="pacchettoEnd.cpp" />
-    <ClCompile Include="pacchettoFaultData.cpp" />
-    <ClCompile Include="pacchettoMissionData.cpp" />
-    <ClCompile Include="pacchettopresentazione.cpp" />
-    <ClCompile Include="pacchettoStatoBlocco.cpp" />
-    <ClCompile Include="pacchettoStatoItinerario.cpp" />
-    <ClCompile Include="pacchettostatolineaatc.cpp" />
-    <ClCompile Include="pacchettoStatoLineaIXL.cpp" />
-    <ClCompile Include="pacchettoStatoSegnali.cpp" />
-    <ClCompile Include="ProfiloVelocita.cpp" />
-    <ClCompile Include="StateCDB.cpp" />
-    <ClCompile Include="StateScudetti.cpp" />
-    <ClCompile Include="StateSegnale.cpp" />
+    <ClCompile Include="messaggi\pacchettoAcknowledgement.cpp" />
+    <ClCompile Include="messaggi\pacchettoComandoBlocco.cpp" />
+    <ClCompile Include="messaggi\pacchettoComandoItinerari.cpp" />
+    <ClCompile Include="messaggi\pacchettoCommandData.cpp" />
+    <ClCompile Include="messaggi\pacchettoEnd.cpp" />
+    <ClCompile Include="messaggi\pacchettoFaultData.cpp" />
+    <ClCompile Include="messaggi\pacchettoMissionData.cpp" />
+    <ClCompile Include="messaggi\pacchettopresentazione.cpp" />
+    <ClCompile Include="messaggi\pacchettoStatoBlocco.cpp" />
+    <ClCompile Include="messaggi\pacchettoStatoItinerario.cpp" />
+    <ClCompile Include="messaggi\pacchettostatolineaatc.cpp" />
+    <ClCompile Include="messaggi\pacchettoStatoLineaIXL.cpp" />
+    <ClCompile Include="messaggi\pacchettoStatoSegnali.cpp" />
+    <ClCompile Include="messaggi\ProfiloVelocita.cpp" />
+    <ClCompile Include="messaggi\StateCDB.cpp" />
+    <ClCompile Include="messaggi\StateScudetti.cpp" />
+    <ClCompile Include="messaggi\StateSegnale.cpp" />
     <ClCompile Include="stazione.cpp" />
     <ClCompile Include="tabellaFermate.cpp" />
     <ClCompile Include="tabellaItinerari.cpp" />
     <ClCompile Include="tableLayoutPanelAllCDB.cpp" />
     <ClCompile Include="tableLayoutPanelSingleItin.cpp" />
     <ClCompile Include="tomWriterTraceListener.cpp" />
-    <ClCompile Include="utility.cpp" />
+    <ClCompile Include="messaggi\utility.cpp" />
     <ClCompile Include="wdogcontrol.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="binario.h" />
-    <ClInclude Include="Fault.h" />
+    <ClInclude Include="messaggi\Fault.h" />
     <ClInclude Include="Form1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="Itinerario.h" />
+    <ClInclude Include="messaggi\pacchettoPositionDataATC.h" />
     <ClInclude Include="MyForm1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="MyForm2.h">
       <FileType>CppForm</FileType>
     </ClInclude>
-    <ClInclude Include="pachettoStatoScudetti.h" />
-    <ClInclude Include="StateBlocco.h" />
-    <ClInclude Include="StateItinerario.h" />
-    <ClInclude Include="Messaggi.h" />
-    <ClInclude Include="Mission.h" />
+    <ClInclude Include="messaggi\pachettoStatoScudetti.h" />
+    <ClInclude Include="messaggi\StateBlocco.h" />
+    <ClInclude Include="messaggi\StateItinerario.h" />
+    <ClInclude Include="messaggi\Messaggi.h" />
+    <ClInclude Include="messaggi\Mission.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
-    <ClInclude Include="pacchettoAcknowledgement.h" />
-    <ClInclude Include="pacchettoComandoBlocco.h" />
-    <ClInclude Include="pacchettoComandoItinerari.h" />
-    <ClInclude Include="pacchettoCommandData.h" />
-    <ClInclude Include="pacchettoEnd.h" />
-    <ClInclude Include="pacchettoFaultData.h" />
-    <ClInclude Include="pacchettoMissionData.h" />
-    <ClInclude Include="pacchettopresentazione.h" />
-    <ClInclude Include="pacchettoStatoBlocco.h" />
-    <ClInclude Include="pacchettoStatoItinerario.h" />
-    <ClInclude Include="pacchettostatolineaatc.h" />
-    <ClInclude Include="pacchettoStatoLineaIXL.h" />
-    <ClInclude Include="pacchettoStatoSegnali.h" />
-    <ClInclude Include="ProfiloVelocita.h" />
-    <ClInclude Include="StateCDB.h" />
-    <ClInclude Include="StateScudetti.h" />
-    <ClInclude Include="StateSegnale.h" />
+    <ClInclude Include="messaggi\pacchettoAcknowledgement.h" />
+    <ClInclude Include="messaggi\pacchettoComandoBlocco.h" />
+    <ClInclude Include="messaggi\pacchettoComandoItinerari.h" />
+    <ClInclude Include="messaggi\pacchettoCommandData.h" />
+    <ClInclude Include="messaggi\pacchettoEnd.h" />
+    <ClInclude Include="messaggi\pacchettoFaultData.h" />
+    <ClInclude Include="messaggi\pacchettoMissionData.h" />
+    <ClInclude Include="messaggi\pacchettopresentazione.h" />
+    <ClInclude Include="messaggi\pacchettoStatoBlocco.h" />
+    <ClInclude Include="messaggi\pacchettoStatoItinerario.h" />
+    <ClInclude Include="messaggi\pacchettostatolineaatc.h" />
+    <ClInclude Include="messaggi\pacchettoStatoLineaIXL.h" />
+    <ClInclude Include="messaggi\pacchettoStatoSegnali.h" />
+    <ClInclude Include="messaggi\ProfiloVelocita.h" />
+    <ClInclude Include="messaggi\StateCDB.h" />
+    <ClInclude Include="messaggi\StateScudetti.h" />
+    <ClInclude Include="messaggi\StateSegnale.h" />
     <ClInclude Include="stazione.h" />
     <ClInclude Include="tabellaFermate.h" />
     <ClInclude Include="tabellaItinerari.h" />
     <ClInclude Include="tableLayoutPanelAllCDB.h" />
     <ClInclude Include="tableLayoutPanelSingleItin.h" />
     <ClInclude Include="tomWriterTraceListener.h" />
-    <ClInclude Include="utility.h" />
+    <ClInclude Include="messaggi\utility.h" />
     <ClInclude Include="wdogcontrol.h" />
   </ItemGroup>
   <ItemGroup>
